update works section on the landing page

--- a/src/landingpage.html
+++ b/src/landingpage.html
@@ -74,30 +74,30 @@
       </h2>
       <div class="work-list">
         <div class="work-item">
-          <img src="./images/landingpage/cup.svg" alt="Cup Icon" class="work-item__icon work-item__icon_1" />
+          <img src="./images/home/dress-icon.svg" alt="Dress Icon" class="work-item__icon work-item__icon_1" loading="lazy"/>
           <h3 class="work-item__title">
-            Sign up.
+            1. Shop online
           </h3>
           <p class="work-item__desc">
-            Sign up in less than 90 seconds with a few simple details.
+            Look for the Openpay logo on your favourite online retailers.<br>Choose Openpay at the checkout.
           </p>
         </div>
         <div class="work-item">
-          <img src="./images/landingpage/sneakers.svg" alt="Sneakers Icon" class="work-item__icon work-item__icon_2" />
+          <img src="./images/home/phone.svg" alt="Phone Icon" class="work-item__icon work-item__icon_2" loading="lazy"/>
           <h3 class="work-item__title">
-            Shop now.
+            2. Sign up
           </h3>
           <p class="work-item__desc">
-            Add items to the basket, and select Openpay at checkout
+            Get approved by Openpay<br>in just 90 seconds with<br>ID and a soft credit check.
           </p>
         </div>
         <div class="work-item">
-          <img src="./images/landingpage/airplane.svg" alt="Airplane Icon" class="work-item__icon work-item__icon_3" />
+          <img src="./images/home/calendar.svg" alt="Calendar Icon" class="work-item__icon work-item__icon_3" loading="lazy"/>
           <h3 class="work-item__title">
-            Pay smarter.
+            3. Select your plan
           </h3>
           <p class="work-item__desc">
-            Pay your plan off in equal, monthly instalments, starting today.
+            Choose between a two or three month plan, and make your first payment today.
           </p>
         </div>
       </div>
