--- a/src/error.html
+++ b/src/error.html
@@ -5,19 +5,19 @@
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="./images/favicon/apple-touch-icon.png"
+      href="https://www.myopenpay.co.uk/images/favicon/apple-touch-icon.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="./images/favicon/favicon-32x32.png"
+      href="https://www.myopenpay.co.uk/images/favicon/favicon-32x32.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="./images/favicon/favicon-16x16.png"
+      href="https://www.myopenpay.co.uk/images/favicon/favicon-16x16.png"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Openpay Nothing found</title>
@@ -26,7 +26,7 @@
       content="Openpay Welcome to a smarter way to pay"
     />
 
-    <link rel="stylesheet" href="./css/error.css?20190517" />
+    <link rel="stylesheet" href="https://www.myopenpay.co.uk/css/error.css?20190517" />
   </head>
 
   <body>
@@ -35,7 +35,7 @@
         <div class="header-logo-and-trigger">
           <a href="/" class="logo-link">
             <img
-              src="./images/general/logo-black.svg"
+              src="https://www.myopenpay.co.uk/images/general/logo-black.svg"
               alt="Openpay Logo"
               class="logo"
             />
@@ -101,13 +101,13 @@
               <a href="/faq" class="paragraphSpec-3">FAQ</a>
             </li>
             <li>
-              <a href="./legal" class="paragraphSpec-3">Legal</a>
+              <a href="/legal" class="paragraphSpec-3">Legal</a>
             </li>
           </ul>
         </nav>
         <a href="/">
           <img
-            src="./images/general/logo-footer.svg"
+            src="https://www.myopenpay.co.uk/images/general/logo-footer.svg"
             loading="lazy"
             alt="Openpay Logo"
             class="footer-logo"
@@ -127,7 +127,7 @@
     <div class="cookie-popup">
       We uses cookies to give you the best browsing experience.
       <a
-        href="./docs/cookie-policy.pdf"
+        href="/docs/cookie-policy.pdf"
         class="cookie-popup__link"
         target="_blank"
         >Find out more</a
@@ -136,6 +136,6 @@
       <button class="cookie-popup__button">Accept</button>
     </div>
 
-    <script defer src="./scripts/main.min.js"></script>
+    <script defer src="https://www.myopenpay.co.uk/scripts/main.min.js"></script>
   </body>
 </html>
