--- a/src/index.html
+++ b/src/index.html
@@ -38,26 +38,35 @@
   <div class="header-wrap block-wap">
     <header class="header block-child-wrap">
       <div class="header-logo-and-trigger">
-        <a href="/" class="logo-link">
-          <img src="./images/general/logo-black.svg" alt="Openpay Logo" class="logo" />
-        </a>
         <div class="trigger-menu">
-          <div class="trigger-menu__line"></div>
+          <span class="trigger-menu__line"></span>
+          <span class="trigger-menu__line"></span>
+          <span class="trigger-menu__line"></span>
         </div>
       </div>
       <nav class="header-nav header-nav_disable">
-        <ul class="nav-list">
-          <li>
-            <a href="/works" class="paragraphSpec-4">How it works</a>
+        <ul class="nav-list" role="navigation">
+          <li class="nav-list__item">
+            <a href="/" class="nav-list__link">
+              <img src="./images/general/logo-black.svg" alt="Openpay Logo" class="nav-list__logo" />
+            </a>
           </li>
-          <li>
-            <a href="/business" class="paragraphSpec-4">I'm a business</a>
+          <li class="nav-list__item">
+            <a href="/works" class="nav-list__link">How it works</a>
           </li>
-          <li>
-            <a href="/contact" class="paragraphSpec-4">Contact us</a>
+          <li class="nav-list__item">
+            <a href="/business" class="nav-list__link">I'm a business</a>
+          </li>
+          <li class="nav-list__item nav-list__item--divider">
+            <a href="/contact" class="nav-list__link">Contact us</a>
+          </li>
+          <li class="nav-list__item">
+            <a href="https://consumer.myopenpay.co.uk/login" target="_blank" rel="noopener" class="nav-list__link">Login</a>
+          </li>
+          <li class="nav-list__item">
+            <a href="https://consumer.myopenpay.co.uk/signup-customer" target="_blank" rel="noopener" class="nav-list__link nav-list__link--button">Sign up</a>
           </li>
         </ul>
-      </nav>
       </nav>
     </header>
   </div>
