--- a/src/works.html
+++ b/src/works.html
@@ -1,211 +1,295 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="./images/favicon/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="./images/favicon/favicon-16x16.png"
+    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Openpay How it works</title>
+    <meta
+      name="description"
+      content="Openpay Welcome to a smarter way to pay"
+    />
+    <meta
+      property="og:image"
+      content="https://www.myopenpay.co.uk/images/works/works.jpg"
+    />
+    <!-- Google Tag Manager -->
+    <script>
+      (function(w, d, s, l, i) {
+        w[l] = w[l] || [];
+        w[l].push({
+          "gtm.start": new Date().getTime(),
+          event: "gtm.js"
+        });
+        var f = d.getElementsByTagName(s)[0],
+          j = d.createElement(s),
+          dl = l != "dataLayer" ? "&l=" + l : "";
+        j.async = true;
+        j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
+        f.parentNode.insertBefore(j, f);
+      })(window, document, "script", "dataLayer", "GTM-NH9RBKG");
+    </script>
+    <link rel="stylesheet" href="./css/works.css?20190517" />
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <link rel="apple-touch-icon" sizes="180x180" href="./images/favicon/apple-touch-icon.png" />
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon/favicon-32x32.png" />
-  <link rel="icon" type="image/png" sizes="16x16" href="./images/favicon/favicon-16x16.png" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Openpay How it works</title>
-  <meta name="description" content="Openpay Welcome to a smarter way to pay" /> 
-  <meta property="og:image" content="https://www.myopenpay.co.uk/images/works/works.jpg" />
-  <!-- Google Tag Manager -->
-  <script>
-    (function (w, d, s, l, i) {
-      w[l] = w[l] || [];
-      w[l].push({
-        'gtm.start': new Date().getTime(),
-        event: 'gtm.js'
-      });
-      var f = d.getElementsByTagName(s)[0],
-        j = d.createElement(s),
-        dl = l != 'dataLayer' ? '&l=' + l : '';
-      j.async = true;
-      j.src =
-        'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
-      f.parentNode.insertBefore(j, f);
-    })(window, document, 'script', 'dataLayer', 'GTM-NH9RBKG');
-  </script>
-  <link rel="stylesheet" href="./css/works.css?20190517" />
-</head>
-
-<body>
-  <!-- Google Tag Manager (noscript) -->
-  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NH9RBKG" height="0" width="0"
-      style="display:none;visibility:hidden"></iframe></noscript>
-  <!-- End Google Tag Manager (noscript) -->
-  <div class="header-wrap block-wap">
-    <header class="header block-child-wrap">
-      <div class="header-logo-and-trigger">
-        <a href="/" class="logo-link">
-          <img src="./images/general/logo-black.svg" alt="Openpay Logo" class="logo" />
-        </a>
-        <div class="trigger-menu">
-          <div class="trigger-menu__line"></div>
+  <body>
+    <!-- Google Tag Manager (noscript) -->
+    <noscript
+      ><iframe
+        src="https://www.googletagmanager.com/ns.html?id=GTM-NH9RBKG"
+        height="0"
+        width="0"
+        style="display:none;visibility:hidden"
+      ></iframe
+    ></noscript>
+    <!-- End Google Tag Manager (noscript) -->
+    <div class="header-wrap block-wap">
+      <header class="header block-child-wrap">
+        <div class="header-logo-and-trigger">
+          <div class="trigger-menu">
+            <span class="trigger-menu__line"></span>
+            <span class="trigger-menu__line"></span>
+            <span class="trigger-menu__line"></span>
+          </div>
         </div>
+        <nav class="header-nav header-nav_disable">
+          <ul class="nav-list" role="navigation">
+            <li class="nav-list__item">
+              <a href="/" class="nav-list__link">
+                <img
+                  src="./images/general/logo-black.svg"
+                  alt="Openpay Logo"
+                  class="nav-list__logo"
+                />
+              </a>
+            </li>
+            <li class="nav-list__item">
+              <a href="/works" class="nav-list__link">How it works</a>
+            </li>
+            <li class="nav-list__item">
+              <a href="/business" class="nav-list__link">I'm a business</a>
+            </li>
+            <li class="nav-list__item nav-list__item--divider">
+              <a href="/contact" class="nav-list__link">Contact us</a>
+            </li>
+            <li class="nav-list__item">
+              <a
+                href="https://consumer.myopenpay.co.uk/login"
+                target="_blank"
+                rel="noopener"
+                class="nav-list__link"
+                >Login</a
+              >
+            </li>
+            <li class="nav-list__item">
+              <a
+                href="https://consumer.myopenpay.co.uk/signup-customer"
+                target="_blank"
+                rel="noopener"
+                class="nav-list__link nav-list__link--button"
+                >Sign up</a
+              >
+            </li>
+          </ul>
+        </nav>
+      </header>
+    </div>
+
+    <section class="hero">
+      <div class="block-child-wrap">
+        <h1 class="hero__title">Enjoy the smarter way to pay.</h1>
       </div>
-      <nav class="header-nav header-nav_disable">
-        <ul class="nav-list">
-          <li>
-            <a href="/works" class="paragraphSpec-4">How it works</a>
-          </li>
-          <li>
-            <a href="/business" class="paragraphSpec-4">I'm a business</a>
-          </li>
-          <li>
-            <a href="/contact" class="paragraphSpec-4">Contact us</a>
-          </li>
-        </ul>
-      </nav>
-    </header>
-  </div>
+    </section>
 
-  <section class="hero">
-    <div class="block-child-wrap">
-      <h1 class="hero__title">Enjoy the smarter way to pay.</h1>
-    </div>
-  </section>
-
-  <section class="about">
-    <div class="block-child-wrap">
-      <p class="about__text">
-        Get greater flexibility when you shop online with our interest-free
-        monthly plans.
-      </p>
-      <p class="about__text">
-        Pay over two or three months with no hidden fees and no interest ever.
-      </p>
-    </div>
-  </section>
-
-  <section class="works">
-    <div class="block-child-wrap">
-      <h2 class="section-title works__title">How it works</h2>
-
-      <div class="works__item">
-        <div class="works__img-wrapper">
-          <img src="./images/works/dress.svg" alt="Dress Icon" class="works__img" loading="lazy" />
-        </div>
-        <h4 class="works__item-title">1. Shop online</h4>
-        <p class="works__item-descr">
-          Look for the Openpay logo on your favourite online websites. Choose
-          Openpay at the checkout.
+    <section class="about">
+      <div class="block-child-wrap">
+        <p class="about__text">
+          Get greater flexibility when you shop online with our interest-free
+          monthly plans.
+        </p>
+        <p class="about__text">
+          Pay over two or three months with no hidden fees and no interest ever.
         </p>
       </div>
+    </section>
 
-      <div class="works__item">
-        <div class="works__img-wrapper">
-          <img src="./images/works/phone.svg" alt="Phone Icon" class="works__img" loading="lazy" />
+    <section class="works">
+      <div class="block-child-wrap">
+        <h2 class="section-title works__title">How it works</h2>
+
+        <div class="works__item">
+          <div class="works__img-wrapper">
+            <img
+              src="./images/works/dress.svg"
+              alt="Dress Icon"
+              class="works__img"
+              loading="lazy"
+            />
+          </div>
+          <h4 class="works__item-title">1. Shop online</h4>
+          <p class="works__item-descr">
+            Look for the Openpay logo on your favourite online websites. Choose
+            Openpay at the checkout.
+          </p>
         </div>
-        <h4 class="works__item-title">2. Sign up</h4>
-        <p class="works__item-descr">
-          Get approved by Openpay in just 90 seconds with ID and a soft credit
-          check.
-        </p>
-      </div>
 
-      <div class="works__item">
-        <div class="works__img-wrapper">
-          <img src="./images/works/calendar.svg" alt="Calendar Icon" class="works__img" loading="lazy" />
+        <div class="works__item">
+          <div class="works__img-wrapper">
+            <img
+              src="./images/works/phone.svg"
+              alt="Phone Icon"
+              class="works__img"
+              loading="lazy"
+            />
+          </div>
+          <h4 class="works__item-title">2. Sign up</h4>
+          <p class="works__item-descr">
+            Get approved by Openpay in just 90 seconds with ID and a soft credit
+            check.
+          </p>
         </div>
-        <h4 class="works__item-title">3. Select your plan</h4>
-        <p class="works__item-descr">
-          Choose between a two or three month plan, and make your first
-          payment today. The remainder will be debited from your chosen card
-          in equal, monthly payments on the dates you choose. There’s no need
-          to wait, your order will be shipped right away.
-        </p>
-      </div>
-    </div>
-  </section>
 
-  <section class="help">
-    <div class="help__container">
-      <div class="help__section help__faq">
-        <h3 class="section-title help__title help__title--faq">
-          Pay on time and stay fee-free
+        <div class="works__item">
+          <div class="works__img-wrapper">
+            <img
+              src="./images/works/calendar.svg"
+              alt="Calendar Icon"
+              class="works__img"
+              loading="lazy"
+            />
+          </div>
+          <h4 class="works__item-title">3. Select your plan</h4>
+          <p class="works__item-descr">
+            Choose between a two or three month plan, and make your first
+            payment today. The remainder will be debited from your chosen card
+            in equal, monthly payments on the dates you choose. There’s no need
+            to wait, your order will be shipped right away.
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <section class="help">
+      <div class="help__container">
+        <div class="help__section help__faq">
+          <h3 class="section-title help__title help__title--faq">
+            Pay on time and stay fee-free
+          </h3>
+          <p class="faq__descr">
+            The only fee we will ever charge is a late fee if you miss a
+            payment.
+          </p>
+          <p class="faq__descr">
+            Don’t worry, we’ll send you a notification to let you know when
+            every automatic payment is scheduled to process.
+          </p>
+          <p class="faq__descr">
+            See
+            <a href="./faq" class="help__link">FAQ</a>
+            for details.
+          </p>
+        </div>
+
+        <div class="help__section help__contacts">
+          <h3 class="section-title help__title">We’re here to help</h3>
+          <div class="help__img-wrapper">
+            <img
+              src="./images/works/help.svg"
+              alt="Help Icon"
+              class="help__img"
+              loading="lazy"
+            />
+          </div>
+          <p class="contacts__text">
+            <a href="mailto:support@myopenpay.co.uk " class="help__link"
+              >Email us</a
+            >, or give us a call on
+            <a href="tel:0800 193 0553" class="contacts__phone">0800 193 0553</a
+            >.
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <section class="readyToChat-wrap">
+      <div class="readyToChat block-child-wrap">
+        <h3 class="section-title readyToChat-title">
+          You're a Business? Let's chat.
         </h3>
-        <p class="faq__descr">
-          The only fee we will ever charge is a late fee if you miss a
-          payment.
-        </p>
-        <p class="faq__descr">
-          Don’t worry, we’ll send you a notification to let you know when
-          every automatic payment is scheduled to process.
-        </p>
-        <p class="faq__descr">
-          See
-          <a href="./faq" class="help__link">FAQ</a>
-          for details.
-        </p>
+        <a href="/get-in-touch" target="_blank" class="readyToChat-btn">
+          Get in touch
+        </a>
       </div>
+    </section>
 
-      <div class="help__section help__contacts">
-        <h3 class="section-title help__title">We’re here to help</h3>
-        <div class="help__img-wrapper">
-          <img src="./images/works/help.svg" alt="Help Icon" class="help__img" loading="lazy" />
-        </div>
-        <p class="contacts__text">
-          <a href="mailto:support@myopenpay.co.uk " class="help__link">Email us</a>, or give us a call on
-          <a href="tel:0800 193 0553" class="contacts__phone">0800 193 0553</a>.
+    <div class="footer-wrap block-wap">
+      <footer class="footer block-child-wrap">
+        <nav class="nav-footer">
+          <ul class="footer-nav-list">
+            <li>
+              <a href="/works" class="paragraphSpec-3">How it works</a>
+            </li>
+            <li>
+              <a href="/business" class="paragraphSpec-3">I’m a business</a>
+            </li>
+            <li>
+              <a href="/contact" class="paragraphSpec-3">Contact us</a>
+            </li>
+            <li>
+              <a href="/faq" class="paragraphSpec-3">FAQ</a>
+            </li>
+            <li>
+              <a href="./legal" class="paragraphSpec-3">Legal</a>
+            </li>
+          </ul>
+        </nav>
+        <a href="/">
+          <img
+            src="./images/general/logo-footer.svg"
+            loading="lazy"
+            alt="Openpay Logo"
+            class="footer-logo"
+          />
+        </a>
+        <p class="copyright">
+          © 2019 Openpay
         </p>
-      </div>
+        <p class="copyright__text">
+          Openpay UK Limited is a company registered in England and Wales
+          (Company Number 11422596) with it's registered office at 49 Greek St,
+          London, United Kingdom, W1D4EG
+        </p>
+      </footer>
     </div>
-  </section>
 
-  <section class="readyToChat-wrap">
-    <div class="readyToChat block-child-wrap">
-      <h3 class="section-title readyToChat-title">
-        You're a Business? Let's chat.
-      </h3>
-      <a href="/get-in-touch" target="_blank" class="readyToChat-btn">
-        Get in touch
-      </a>
+    <div class="cookie-popup">
+      We uses cookies to give you the best browsing experience.
+      <a
+        href="./docs/cookie-policy.pdf"
+        class="cookie-popup__link"
+        target="_blank"
+        >Find out more</a
+      >
+      or adjust your settings.
+      <button class="cookie-popup__button">Accept</button>
     </div>
-  </section>
 
-  <div class="footer-wrap block-wap">
-    <footer class="footer block-child-wrap">
-      <nav class="nav-footer">
-        <ul class="footer-nav-list">
-          <li>
-            <a href="/works" class="paragraphSpec-3">How it works</a>
-          </li>
-          <li>
-            <a href="/business" class="paragraphSpec-3">I’m a business</a>
-          </li>
-          <li>
-            <a href="/contact" class="paragraphSpec-3">Contact us</a>
-          </li>
-          <li>
-            <a href="/faq" class="paragraphSpec-3">FAQ</a>
-          </li>
-          <li>
-            <a href="./legal" class="paragraphSpec-3">Legal</a>
-          </li>
-        </ul>
-      </nav>
-      <a href="/">
-        <img src="./images/general/logo-footer.svg" loading="lazy" alt="Openpay Logo" class="footer-logo" />
-      </a>
-      <p class="copyright">
-        © 2019 Openpay
-      </p>
-      <p class="copyright__text">
-        Openpay UK Limited is a company registered in England and Wales (Company Number 11422596) with it's registered office at 49 Greek St, London, United Kingdom, W1D4EG
-      </p>
-    </footer>
-  </div>
-
-  <div class="cookie-popup">
-    We uses cookies to give you the best browsing experience.
-    <a href="./docs/cookie-policy.pdf" class="cookie-popup__link" target="_blank">Find out more</a>
-    or adjust your settings.
-    <button class="cookie-popup__button">Accept</button>
-  </div>
-
-  <script defer src="./scripts/main.min.js"></script>
-</body>
-
+    <script defer src="./scripts/main.min.js"></script>
+  </body>
 </html>
