--- a/src/contact.html
+++ b/src/contact.html
@@ -1,156 +1,234 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="./images/favicon/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="./images/favicon/favicon-16x16.png"
+    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Openpay Contact Us</title>
+    <meta
+      name="description"
+      content="Openpay Welcome to a smarter way to pay"
+    />
+    <meta
+      property="og:image"
+      content="https://www.myopenpay.co.uk/images/contact/contact.jpg"
+    />
+    <!-- Google Tag Manager -->
+    <script>
+      (function(w, d, s, l, i) {
+        w[l] = w[l] || [];
+        w[l].push({
+          "gtm.start": new Date().getTime(),
+          event: "gtm.js"
+        });
+        var f = d.getElementsByTagName(s)[0],
+          j = d.createElement(s),
+          dl = l != "dataLayer" ? "&l=" + l : "";
+        j.async = true;
+        j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
+        f.parentNode.insertBefore(j, f);
+      })(window, document, "script", "dataLayer", "GTM-NH9RBKG");
+    </script>
+    <link rel="stylesheet" href="./css/contact.css?20190517" />
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <link rel="apple-touch-icon" sizes="180x180" href="./images/favicon/apple-touch-icon.png" />
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon/favicon-32x32.png" />
-  <link rel="icon" type="image/png" sizes="16x16" href="./images/favicon/favicon-16x16.png" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Openpay Contact Us</title>
-  <meta name="description" content="Openpay Welcome to a smarter way to pay" />
-  <meta property="og:image" content="https://www.myopenpay.co.uk/images/contact/contact.jpg" />
-  <!-- Google Tag Manager -->
-  <script>
-    (function (w, d, s, l, i) {
-      w[l] = w[l] || [];
-      w[l].push({
-        'gtm.start': new Date().getTime(),
-        event: 'gtm.js'
-      });
-      var f = d.getElementsByTagName(s)[0],
-        j = d.createElement(s),
-        dl = l != 'dataLayer' ? '&l=' + l : '';
-      j.async = true;
-      j.src =
-        'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
-      f.parentNode.insertBefore(j, f);
-    })(window, document, 'script', 'dataLayer', 'GTM-NH9RBKG');
-  </script>
-  <link rel="stylesheet" href="./css/contact.css?20190517" />
-</head>
+  <body>
+    <!-- Google Tag Manager (noscript) -->
+    <noscript
+      ><iframe
+        src="https://www.googletagmanager.com/ns.html?id=GTM-NH9RBKG"
+        height="0"
+        width="0"
+        style="display:none;visibility:hidden"
+      ></iframe
+    ></noscript>
+    <!-- End Google Tag Manager (noscript) -->
+    <div class="header-wrap block-wap">
+      <header class="header block-child-wrap">
+        <div class="header-logo-and-trigger">
+          <div class="trigger-menu">
+            <span class="trigger-menu__line"></span>
+            <span class="trigger-menu__line"></span>
+            <span class="trigger-menu__line"></span>
+          </div>
+        </div>
+        <nav class="header-nav header-nav_disable">
+          <ul class="nav-list" role="navigation">
+            <li class="nav-list__item">
+              <a href="/" class="nav-list__link">
+                <img
+                  src="./images/general/logo-black.svg"
+                  alt="Openpay Logo"
+                  class="nav-list__logo"
+                />
+              </a>
+            </li>
+            <li class="nav-list__item">
+              <a href="/works" class="nav-list__link">How it works</a>
+            </li>
+            <li class="nav-list__item">
+              <a href="/business" class="nav-list__link">I'm a business</a>
+            </li>
+            <li class="nav-list__item nav-list__item--divider">
+              <a href="/contact" class="nav-list__link">Contact us</a>
+            </li>
+            <li class="nav-list__item">
+              <a
+                href="https://consumer.myopenpay.co.uk/login"
+                target="_blank"
+                rel="noopener"
+                class="nav-list__link"
+                >Login</a
+              >
+            </li>
+            <li class="nav-list__item">
+              <a
+                href="https://consumer.myopenpay.co.uk/signup-customer"
+                target="_blank"
+                rel="noopener"
+                class="nav-list__link nav-list__link--button"
+                >Sign up</a
+              >
+            </li>
+          </ul>
+        </nav>
+      </header>
+    </div>
 
-<body>
-  <!-- Google Tag Manager (noscript) -->
-  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NH9RBKG" height="0" width="0"
-      style="display:none;visibility:hidden"></iframe></noscript>
-  <!-- End Google Tag Manager (noscript) -->
-  <div class="header-wrap block-wap">
-    <header class="header block-child-wrap">
-      <div class="header-logo-and-trigger">
-        <a href="/" class="logo-link">
-          <img src="./images/general/logo-black.svg" alt="Openpay Logo" class="logo" />
+    <section class="hero">
+      <div class="block-child-wrap">
+        <h1 class="hero__title">Contact us.</h1>
+      </div>
+    </section>
+
+    <section class="contact">
+      <div class="contact__wrapper">
+        <h2 class="contact__title">Ways to contact us</h2>
+        <div class="contact__container">
+          <div class="contact__mail">
+            <div class="contact__img-wrapper">
+              <img
+                src="./images/contact/mail.svg"
+                alt="Email Icon"
+                class="contact__img contact__img--mail"
+              />
+            </div>
+            <h3 class="contact__subtitle contact__subtitle--mail">Email us.</h3>
+            <p class="contact__text">
+              For non-urgent and general help, contact us by email and we’ll get
+              back to you promptly.
+            </p>
+            <a href="mailto:support@myopenpay.co.uk " class="contact__link"
+              >support@myopenpay.co.uk
+            </a>
+          </div>
+
+          <div class="contact__phone">
+            <div class="contact__img-wrapper">
+              <img
+                src="./images/contact/phone.svg"
+                alt="Phone Icon"
+                class="contact__img"
+              />
+            </div>
+            <h3 class="contact__subtitle">Call us.</h3>
+            <p class="contact__text">
+              If you need urgent assistance, contact one of our friendly support
+              staff to assist you.
+            </p>
+            <a href="tel:0800 193 0553" class="contact__link">0800 193 0553</a>
+            <p class="contact__text_subtitle">
+              We're available 9am-5:30pm, 7 days a week.
+            </p>
+          </div>
+        </div>
+        <div class="contact__media">
+          <h4 class="contact__media-title">
+            For media enquiries please contact Brands2Life
+          </h4>
+          <p>
+            <a
+              class="contact__media-link"
+              href="mailto: openpay@brands2life.com"
+              >openpay@brands2life.com</a
+            >
+            or phone
+            <a href="tel: +44 020 7592 1200">
+              +44 (0)020 7592 1200.
+            </a>
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <div class="footer-wrap block-wap">
+      <footer class="footer block-child-wrap">
+        <nav class="nav-footer">
+          <ul class="footer-nav-list">
+            <li>
+              <a href="/works" class="paragraphSpec-3">How it works</a>
+            </li>
+            <li>
+              <a href="/business" class="paragraphSpec-3">I’m a business</a>
+            </li>
+            <li>
+              <a href="/contact" class="paragraphSpec-3">Contact us</a>
+            </li>
+            <li>
+              <a href="/faq" class="paragraphSpec-3">FAQ</a>
+            </li>
+            <li>
+              <a href="./legal" class="paragraphSpec-3">Legal</a>
+            </li>
+          </ul>
+        </nav>
+        <a href="/">
+          <img
+            src="./images/general/logo-footer.svg"
+            loading="lazy"
+            alt="Openpay Logo"
+            class="footer-logo"
+          />
         </a>
-        <div class="trigger-menu">
-          <div class="trigger-menu__line"></div>
-        </div>
-      </div>
-      <nav class="header-nav header-nav_disable">
-        <ul class="nav-list">
-          <li>
-            <a href="/works" class="paragraphSpec-4">How it works</a>
-          </li>
-          <li>
-            <a href="/business" class="paragraphSpec-4">I'm a business</a>
-          </li>
-          <li>
-            <a href="/contact" class="paragraphSpec-4">Contact us</a>
-          </li>
-        </ul>
-      </nav>
-      </nav>
-    </header>
-  </div>
-
-  <section class="hero">
-    <div class="block-child-wrap">
-      <h1 class="hero__title">Contact us.</h1>
-    </div>
-  </section>
-
-  <section class="contact">
-    <div class="contact__wrapper">
-      <h2 class="contact__title">Ways to contact us</h2>
-      <div class="contact__container">
-        <div class="contact__mail">
-          <div class="contact__img-wrapper">
-            <img src="./images/contact/mail.svg" alt="Email Icon" class="contact__img contact__img--mail" />
-          </div>
-          <h3 class="contact__subtitle contact__subtitle--mail">Email us.</h3>
-          <p class="contact__text">
-            For non-urgent and general help, contact us by email and we’ll get
-            back to you promptly.
-          </p>
-          <a href="mailto:support@myopenpay.co.uk " class="contact__link">support@myopenpay.co.uk </a>
-        </div>
-
-        <div class="contact__phone">
-          <div class="contact__img-wrapper">
-            <img src="./images/contact/phone.svg" alt="Phone Icon" class="contact__img" />
-          </div>
-          <h3 class="contact__subtitle">Call us.</h3>
-          <p class="contact__text">If you need urgent assistance, contact one of our friendly support staff to assist
-            you.
-          </p>
-          <a href="tel:0800 193 0553" class="contact__link">0800 193 0553</a>
-          <p class="contact__text_subtitle"> We're available 9am-5:30pm, 7 days a week.</p>
-        </div>
-      </div>
-      <div class="contact__media">
-        <h4 class="contact__media-title">For media enquiries please contact Brands2Life </h4>
-        <p>
-          <a class="contact__media-link" href="mailto: openpay@brands2life.com">openpay@brands2life.com</a>
-          or phone
-          <a href="tel: +44 020 7592 1200">
-            +44 (0)020 7592 1200.
-          </a>
+        <p class="copyright">
+          © 2019 Openpay
         </p>
-      </div>
+        <p class="copyright__text">
+          Openpay UK Limited is a company registered in England and Wales
+          (Company Number 11422596) with it's registered office at 49 Greek St,
+          London, United Kingdom, W1D4EG
+        </p>
+      </footer>
     </div>
-  </section>
 
-  <div class="footer-wrap block-wap">
-    <footer class="footer block-child-wrap">
-      <nav class="nav-footer">
-        <ul class="footer-nav-list">
-          <li>
-            <a href="/works" class="paragraphSpec-3">How it works</a>
-          </li>
-          <li>
-            <a href="/business" class="paragraphSpec-3">I’m a business</a>
-          </li>
-          <li>
-            <a href="/contact" class="paragraphSpec-3">Contact us</a>
-          </li>
-          <li>
-            <a href="/faq" class="paragraphSpec-3">FAQ</a>
-          </li>
-          <li>
-            <a href="./legal" class="paragraphSpec-3">Legal</a>
-          </li>
-        </ul>
-      </nav>
-      <a href="/">
-        <img src="./images/general/logo-footer.svg" loading="lazy" alt="Openpay Logo" class="footer-logo" />
-      </a>
-      <p class="copyright">
-        © 2019 Openpay
-      </p>
-      <p class="copyright__text">
-        Openpay UK Limited is a company registered in England and Wales (Company Number 11422596) with it's registered
-        office at 49 Greek St, London, United Kingdom, W1D4EG
-      </p>
-    </footer>
-  </div>
+    <div class="cookie-popup">
+      We uses cookies to give you the best browsing experience.
+      <a
+        href="./docs/cookie-policy.pdf"
+        class="cookie-popup__link"
+        target="_blank"
+        >Find out more</a
+      >
+      or adjust your settings.
+      <button class="cookie-popup__button">Accept</button>
+    </div>
 
-  <div class="cookie-popup">
-    We uses cookies to give you the best browsing experience.
-    <a href="./docs/cookie-policy.pdf" class="cookie-popup__link" target="_blank">Find out more</a>
-    or adjust your settings.
-    <button class="cookie-popup__button">Accept</button>
-  </div>
-
-  <script defer src="./scripts/main.min.js"></script>
-</body>
-
+    <script defer src="./scripts/main.min.js"></script>
+  </body>
 </html>
