--- a/src/get-in-touch.html
+++ b/src/get-in-touch.html
@@ -1,201 +1,284 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
-    <link rel="apple-touch-icon" sizes="180x180" href="./images/favicon/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="./images/favicon/favicon-16x16.png" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="./images/favicon/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="./images/favicon/favicon-16x16.png"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Openpay Get in touch</title>
-    <meta name="description" content="Openpay Welcome to a smarter way to pay" />
-    <meta property="og:image" content="https://www.myopenpay.co.uk/images/get-in-touch/get-in-touch.jpg" />
+    <meta
+      name="description"
+      content="Openpay Welcome to a smarter way to pay"
+    />
+    <meta
+      property="og:image"
+      content="https://www.myopenpay.co.uk/images/get-in-touch/get-in-touch.jpg"
+    />
     <!-- Google Tag Manager -->
     <script>
-        (function (w, d, s, l, i) {
-            w[l] = w[l] || [];
-            w[l].push({
-                'gtm.start': new Date().getTime(),
-                event: 'gtm.js'
-            });
-            var f = d.getElementsByTagName(s)[0],
-                j = d.createElement(s),
-                dl = l != 'dataLayer' ? '&l=' + l : '';
-            j.async = true;
-            j.src =
-                'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
-            f.parentNode.insertBefore(j, f);
-        })(window, document, 'script', 'dataLayer', 'GTM-NH9RBKG');
+      (function(w, d, s, l, i) {
+        w[l] = w[l] || [];
+        w[l].push({
+          "gtm.start": new Date().getTime(),
+          event: "gtm.js"
+        });
+        var f = d.getElementsByTagName(s)[0],
+          j = d.createElement(s),
+          dl = l != "dataLayer" ? "&l=" + l : "";
+        j.async = true;
+        j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
+        f.parentNode.insertBefore(j, f);
+      })(window, document, "script", "dataLayer", "GTM-NH9RBKG");
     </script>
     <link rel="stylesheet" href="./css/get-in-touch.css?20190517" />
-</head>
+  </head>
 
-<body>
+  <body>
     <div class="header-wrap block-wap">
-        <header class="header block-child-wrap">
-            <div class="header-logo-and-trigger">
-                <a href="/" class="logo-link">
-                    <img src="./images/general/logo-black.svg" alt="Openpay Logo" class="logo" />
-                </a>
-                <div class="trigger-menu">
-                    <div class="trigger-menu__line"></div>
-                </div>
-            </div>
-            <nav class="header-nav header-nav_disable">
-                <ul class="nav-list">
-                    <li>
-                        <a href="/works" class="paragraphSpec-4">How it works</a>
-                    </li>
-                    <li>
-                        <a href="/business" class="paragraphSpec-4">I'm a business</a>
-                    </li>
-                    <li>
-                        <a href="/contact" class="paragraphSpec-4">Contact us</a>
-                    </li>
-                </ul>
-            </nav>
-        </header>
+      <header class="header block-child-wrap">
+        <div class="header-logo-and-trigger">
+          <div class="trigger-menu">
+            <span class="trigger-menu__line"></span>
+            <span class="trigger-menu__line"></span>
+            <span class="trigger-menu__line"></span>
+          </div>
+        </div>
+        <nav class="header-nav header-nav_disable">
+          <ul class="nav-list" role="navigation">
+            <li class="nav-list__item">
+              <a href="/" class="nav-list__link">
+                <img
+                  src="./images/general/logo-black.svg"
+                  alt="Openpay Logo"
+                  class="nav-list__logo"
+                />
+              </a>
+            </li>
+            <li class="nav-list__item">
+              <a href="/works" class="nav-list__link">How it works</a>
+            </li>
+            <li class="nav-list__item">
+              <a href="/business" class="nav-list__link">I'm a business</a>
+            </li>
+            <li class="nav-list__item nav-list__item--divider">
+              <a href="/contact" class="nav-list__link">Contact us</a>
+            </li>
+            <li class="nav-list__item">
+              <a
+                href="https://consumer.myopenpay.co.uk/login"
+                target="_blank"
+                rel="noopener"
+                class="nav-list__link"
+                >Login</a
+              >
+            </li>
+            <li class="nav-list__item">
+              <a
+                href="https://consumer.myopenpay.co.uk/signup-customer"
+                target="_blank"
+                rel="noopener"
+                class="nav-list__link nav-list__link--button"
+                >Sign up</a
+              >
+            </li>
+          </ul>
+        </nav>
+      </header>
     </div>
 
     <section class="hero">
-        <h1 class="hero__title">Get in touch.</h1>
-        <p class="hero__subtitle">
-            One of our team will get back to you shortly.
-        </p>
+      <h1 class="hero__title">Get in touch.</h1>
+      <p class="hero__subtitle">
+        One of our team will get back to you shortly.
+      </p>
     </section>
 
     <section class="get-in-touch">
-            <form class="gform get-in-touch__form" method="POST"
-                action="https://script.google.com/macros/s/AKfycbxIaYL-ph8lbMPj_BwTnv_eda9oVTfwvTULdQWflBbJwdJMdtEO/exec">
-                <div class="form-elements">
-                    <div class="form__container">
-                        <label class="form__label">First name *
-                            <input class="form__input" type="text" name="firstname" required />
-                        </label>
-                        <label class="form__label">Last name *
-                            <input class="form__input" type="text" name="lastname" required />
-                        </label>
-                    </div>
-                    <div class="form__container">
-                        <label class="form__label">Email *
-                            <input class="form__input" type="email" name="email" maxlength="254" required />
-                        </label>
-                        <label class="form__label">Phone *
-                            <input class="form__input" type="text" name="phone" required />
-                        </label>
-                    </div>
-                    <div class="form__container">
-                        <label class="form__label">Company name *
-                            <input class="form__input" type="text" name="company" required />
-                        </label>
-                        <label class="form__label form__label--select">Country
-                            <select class="form__input form__input--select" name="country">
-                                <option value="" disabled selected>Select a country</option>
-                                <option value="Australia">Australia</option>
-                                <option value="United Kingdom">United Kingdom</option>
-                                <option value="Australia">United States</option>
-                            </select>
-                        </label>
-                    </div>
+      <form
+        class="gform get-in-touch__form"
+        method="POST"
+        action="https://script.google.com/macros/s/AKfycbxIaYL-ph8lbMPj_BwTnv_eda9oVTfwvTULdQWflBbJwdJMdtEO/exec"
+      >
+        <div class="form-elements">
+          <div class="form__container">
+            <label class="form__label"
+              >First name *
+              <input
+                class="form__input"
+                type="text"
+                name="firstname"
+                required
+              />
+            </label>
+            <label class="form__label"
+              >Last name *
+              <input class="form__input" type="text" name="lastname" required />
+            </label>
+          </div>
+          <div class="form__container">
+            <label class="form__label"
+              >Email *
+              <input
+                class="form__input"
+                type="email"
+                name="email"
+                maxlength="254"
+                required
+              />
+            </label>
+            <label class="form__label"
+              >Phone *
+              <input class="form__input" type="text" name="phone" required />
+            </label>
+          </div>
+          <div class="form__container">
+            <label class="form__label"
+              >Company name *
+              <input class="form__input" type="text" name="company" required />
+            </label>
+            <label class="form__label form__label--select"
+              >Country
+              <select class="form__input form__input--select" name="country">
+                <option value="" disabled selected>Select a country</option>
+                <option value="Australia">Australia</option>
+                <option value="United Kingdom">United Kingdom</option>
+                <option value="Australia">United States</option>
+              </select>
+            </label>
+          </div>
 
-                    <div class="form__container">
-                        <label class="form__label form__label--select">Annual turnover
-                            <select class="form__input form__input--select" name="turnover">
-                                <option value="" disabled selected>Select turnover</option>
-                                <option value="Under £10M">Under £10M</option>
-                                <option value="£10M - £50M">£10M - £50M</option>
-                                <option value="£51M - £100M">£51M - £100M</option>
-                                <option value="£101M+">£101M+</option>
-                            </select>
-                        </label>
-                        <label class="form__label form__label--select">Industry
-                            <select class="form__input form__input--select" name="industry">
-                                <option value="" disabled selected>Select industry</option>
-                                <option value="Fashion">Fashion</option>
-                                <option value="Health & Wellbeing">Health & Wellbeing</option>
-                                <option value="Lifestyle">Lifestyle</option>
-                                <option value="Pet care">Pet care</option>
-                                <option value="Sport & Outdoors">Sport & Outdoors</option>
-                                <option value="Trades & Services">Trades & Services</option>
-                                <option value="Other">Other</option>
-                            </select>
-                        </label>
-                    </div>
+          <div class="form__container">
+            <label class="form__label form__label--select"
+              >Annual turnover
+              <select class="form__input form__input--select" name="turnover">
+                <option value="" disabled selected>Select turnover</option>
+                <option value="Under £10M">Under £10M</option>
+                <option value="£10M - £50M">£10M - £50M</option>
+                <option value="£51M - £100M">£51M - £100M</option>
+                <option value="£101M+">£101M+</option>
+              </select>
+            </label>
+            <label class="form__label form__label--select"
+              >Industry
+              <select class="form__input form__input--select" name="industry">
+                <option value="" disabled selected>Select industry</option>
+                <option value="Fashion">Fashion</option>
+                <option value="Health & Wellbeing">Health & Wellbeing</option>
+                <option value="Lifestyle">Lifestyle</option>
+                <option value="Pet care">Pet care</option>
+                <option value="Sport & Outdoors">Sport & Outdoors</option>
+                <option value="Trades & Services">Trades & Services</option>
+                <option value="Other">Other</option>
+              </select>
+            </label>
+          </div>
 
-                    <div class="form__container">
-                        <label class="form__label form__label--select">Are you part of a franchise?
-                            <select class="form__input form__input--select form__input--2lines" name="franchise">
-                                <option value="" disabled selected>Select answer</option>
-                                <option value="Yes">Yes</option>
-                                <option value="No">No</option>
-                            </select>
-                        </label>
-                        <label class="form__label form__label--select">Have you been in business for more than 2
-                            years?
-                            <select class="form__input form__input--select" name="business-years-more-than-2">
-                                <option value="" disabled selected>Select answer</option>
-                                <option value="Yes">Yes</option>
-                                <option value="No">No</option>
-                            </select>
-                        </label>
-                    </div>
+          <div class="form__container">
+            <label class="form__label form__label--select"
+              >Are you part of a franchise?
+              <select
+                class="form__input form__input--select form__input--2lines"
+                name="franchise"
+              >
+                <option value="" disabled selected>Select answer</option>
+                <option value="Yes">Yes</option>
+                <option value="No">No</option>
+              </select>
+            </label>
+            <label class="form__label form__label--select"
+              >Have you been in business for more than 2 years?
+              <select
+                class="form__input form__input--select"
+                name="business-years-more-than-2"
+              >
+                <option value="" disabled selected>Select answer</option>
+                <option value="Yes">Yes</option>
+                <option value="No">No</option>
+              </select>
+            </label>
+          </div>
 
-                    <button class="form__submit" type="submit">
-                        Submit
-                    </button>
-                </div>
+          <button class="form__submit" type="submit">
+            Submit
+          </button>
+        </div>
 
-                <div class="thankyou">
-                    <em>Thank you,</em> we'll be in touch.
-                </div>
-            </form>
+        <div class="thankyou"><em>Thank you,</em> we'll be in touch.</div>
+      </form>
     </section>
 
-
     <div class="footer-wrap block-wap">
-        <footer class="footer block-child-wrap">
-            <nav class="nav-footer">
-                <ul class="footer-nav-list">
-                    <li>
-                        <a href="/works" class="paragraphSpec-3">How it works</a>
-                    </li>
-                    <li>
-                        <a href="/business" class="paragraphSpec-3">I’m a business</a>
-                    </li>
-                    <li>
-                        <a href="/contact" class="paragraphSpec-3">Contact us</a>
-                    </li>
-                    <li>
-                        <a href="/faq" class="paragraphSpec-3">FAQ</a>
-                    </li>
-                    <li>
-                        <a href="./legal" class="paragraphSpec-3">Legal</a>
-                    </li>
-                </ul>
-            </nav>
-            <a href="/">
-                <img src="./images/general/logo-footer.svg" loading="lazy" alt="Openpay Logo" class="footer-logo" />
-            </a>
-            <p class="copyright">
-                © 2019 Openpay
-            </p>
-            <p class="copyright__text">
-                Openpay UK Limited is a company registered in England and Wales (Company Number 11422596) with it's
-                registered office at 49 Greek St, London, United Kingdom, W1D4EG
-            </p>
-        </footer>
+      <footer class="footer block-child-wrap">
+        <nav class="nav-footer">
+          <ul class="footer-nav-list">
+            <li>
+              <a href="/works" class="paragraphSpec-3">How it works</a>
+            </li>
+            <li>
+              <a href="/business" class="paragraphSpec-3">I’m a business</a>
+            </li>
+            <li>
+              <a href="/contact" class="paragraphSpec-3">Contact us</a>
+            </li>
+            <li>
+              <a href="/faq" class="paragraphSpec-3">FAQ</a>
+            </li>
+            <li>
+              <a href="./legal" class="paragraphSpec-3">Legal</a>
+            </li>
+          </ul>
+        </nav>
+        <a href="/">
+          <img
+            src="./images/general/logo-footer.svg"
+            loading="lazy"
+            alt="Openpay Logo"
+            class="footer-logo"
+          />
+        </a>
+        <p class="copyright">
+          © 2019 Openpay
+        </p>
+        <p class="copyright__text">
+          Openpay UK Limited is a company registered in England and Wales
+          (Company Number 11422596) with it's registered office at 49 Greek St,
+          London, United Kingdom, W1D4EG
+        </p>
+      </footer>
     </div>
 
     <div class="cookie-popup">
-        We uses cookies to give you the best browsing experience.
-        <a href="./docs/cookie-policy.pdf" class="cookie-popup__link" target="_blank">Find out more</a>
-        or adjust your settings.
-        <button class="cookie-popup__button">Accept</button>
+      We uses cookies to give you the best browsing experience.
+      <a
+        href="./docs/cookie-policy.pdf"
+        class="cookie-popup__link"
+        target="_blank"
+        >Find out more</a
+      >
+      or adjust your settings.
+      <button class="cookie-popup__button">Accept</button>
     </div>
 
     <script defer src="./scripts/main.min.js"></script>
 
-    <script data-cfasync="false" src="./scripts/form-submission-handler.min.js"></script>
-</body>
-
+    <script
+      data-cfasync="false"
+      src="./scripts/form-submission-handler.min.js"
+    ></script>
+  </body>
 </html>
