--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,7 @@
       style="display:none;visibility:hidden"></iframe></noscript>
   <!-- End Google Tag Manager (noscript) -->
   <div class="header-wrap block-wap">
-    <header class="header block-child-wrap">
+    <header class="header">
       <div class="header-logo-and-trigger">
         <div class="trigger-menu">
           <span class="trigger-menu__line"></span>
