--- a/src/legal.html
+++ b/src/legal.html
@@ -60,7 +60,7 @@
     ></noscript>
     <!-- End Google Tag Manager (noscript) -->
     <div class="header-wrap block-wap">
-      <header class="header block-child-wrap">
+      <header class="header">
         <div class="header-logo-and-trigger">
           <div class="trigger-menu">
             <span class="trigger-menu__line"></span>
@@ -69,26 +69,26 @@
           </div>
         </div>
         <nav class="header-nav header-nav_disable">
+          <a href="/" class="nav-list__link nav-list__link--logo">
+            <img
+              src="./images/general/logo-black.svg"
+              alt="Openpay Logo"
+              class="nav-list__logo"
+            />
+          </a>
           <ul class="nav-list" role="navigation">
-            <li class="nav-list__item">
-              <a href="/" class="nav-list__link">
-                <img
-                  src="./images/general/logo-black.svg"
-                  alt="Openpay Logo"
-                  class="nav-list__logo"
-                />
-              </a>
-            </li>
             <li class="nav-list__item">
               <a href="/works" class="nav-list__link">How it works</a>
             </li>
             <li class="nav-list__item">
               <a href="/business" class="nav-list__link">I'm a business</a>
             </li>
-            <li class="nav-list__item nav-list__item--divider">
+            <li class="nav-list__item">
               <a href="/contact" class="nav-list__link">Contact us</a>
             </li>
-            <li class="nav-list__item">
+          </ul>
+          <div class="portal">
+            <span class="portal__item nav-list__item">
               <a
                 href="https://consumer.myopenpay.co.uk/login"
                 target="_blank"
@@ -96,17 +96,17 @@
                 class="nav-list__link"
                 >Login</a
               >
-            </li>
-            <li class="nav-list__item">
+            </span>
+            <span class="portal__item nav-list__item">
               <a
                 href="https://consumer.myopenpay.co.uk/signup-customer"
                 target="_blank"
                 rel="noopener"
-                class="nav-list__link nav-list__link--button"
+                class="nav-list__link portal__link--button"
                 >Sign up</a
               >
-            </li>
-          </ul>
+            </span>
+          </div>
         </nav>
       </header>
     </div>
