--- a/src/contact.html
+++ b/src/contact.html
@@ -84,14 +84,13 @@
               <a href="/business" class="nav-list__link">I'm a business</a>
             </li>
             <li class="nav-list__item">
-              <a href="/contact" class="nav-list__link">Contact us</a>
+              <a href="/contact" class="nav-list__link nav-list__link--active">Contact us</a>
             </li>
           </ul>
           <div class="portal">
             <span class="portal__item nav-list__item">
               <a
                 href="https://consumer.myopenpay.co.uk/login"
-                target="_blank"
                 rel="noopener"
                 class="nav-list__link"
                 >Login</a
@@ -100,7 +99,6 @@
             <span class="portal__item nav-list__item">
               <a
                 href="https://consumer.myopenpay.co.uk/signup-customer"
-                target="_blank"
                 rel="noopener"
                 class="nav-list__link portal__link--button"
                 >Sign up</a
