--- a/src/index.html
+++ b/src/index.html
@@ -61,10 +61,10 @@
         </ul>
         <div class="portal">
             <span class="portal__item nav-list__item">
-              <a href="https://consumer.myopenpay.co.uk/login" target="_blank" rel="noopener" class="nav-list__link">Login</a>
+              <a href="https://consumer.myopenpay.co.uk/login" rel="noopener" class="nav-list__link">Login</a>
             </span>
             <span class="portal__item nav-list__item">
-              <a href="https://consumer.myopenpay.co.uk/signup-customer" target="_blank" rel="noopener" class="nav-list__link portal__link--button">Sign up</a>
+              <a href="https://consumer.myopenpay.co.uk/signup-customer" rel="noopener" class="nav-list__link portal__link--button">Sign up</a>
             </span>
         </div>
       </nav>
