--- a/src/business.html
+++ b/src/business.html
@@ -81,7 +81,7 @@
               <a href="/works" class="nav-list__link">How it works</a>
             </li>
             <li class="nav-list__item">
-              <a href="/business" class="nav-list__link">I'm a business</a>
+              <a href="/business" class="nav-list__link nav-list__link--active">I'm a business</a>
             </li>
             <li class="nav-list__item">
               <a href="/contact" class="nav-list__link">Contact us</a>
@@ -91,7 +91,6 @@
             <span class="portal__item nav-list__item">
               <a
                 href="https://consumer.myopenpay.co.uk/login"
-                target="_blank"
                 rel="noopener"
                 class="nav-list__link"
                 >Login</a
@@ -100,7 +99,6 @@
             <span class="portal__item nav-list__item">
               <a
                 href="https://consumer.myopenpay.co.uk/signup-customer"
-                target="_blank"
                 rel="noopener"
                 class="nav-list__link portal__link--button"
                 >Sign up</a
