--- a/src/works.html
+++ b/src/works.html
@@ -78,7 +78,7 @@
           </a>
           <ul class="nav-list" role="navigation">
             <li class="nav-list__item">
-              <a href="/works" class="nav-list__link">How it works</a>
+              <a href="/works" class="nav-list__link nav-list__link--active">How it works</a>
             </li>
             <li class="nav-list__item">
               <a href="/business" class="nav-list__link">I'm a business</a>
@@ -91,7 +91,6 @@
             <span class="portal__item nav-list__item">
               <a
                 href="https://consumer.myopenpay.co.uk/login"
-                target="_blank"
                 rel="noopener"
                 class="nav-list__link"
                 >Login</a
@@ -100,7 +99,6 @@
             <span class="portal__item nav-list__item">
               <a
                 href="https://consumer.myopenpay.co.uk/signup-customer"
-                target="_blank"
                 rel="noopener"
                 class="nav-list__link portal__link--button"
                 >Sign up</a
